Fix vertical spacing in infobar__action
To allow for extra info in Matching UI

--- a/src/css/_organisms/_infobar.css
+++ b/src/css/_organisms/_infobar.css
@@ -52,11 +52,14 @@
   }
 
   &__action {
-    justify-content: space-between;
     display: flex;
     flex-direction: column;
     @media (--tablet) {
       margin-left: 1rem;
+    }
+    
+    .btn {
+      margin-top: .4rem;
     }
   }
   
